se suben los archivos modificados

--- a/css/main.css
+++ b/css/main.css
@@ -192,10 +192,10 @@ ul {
   float: right;
 }
 /** Lettering**/
-h1.nombre-sitio span {
+/* h1.nombre-sitio span {
   position: relative;
   text-shadow: 0 0 30px black;
-}
+} */
 
 @media only screen and (min-width: 992px){
   .char1 {
@@ -236,6 +236,7 @@ h1.nombre-sitio span {
 div.hero {
   background-image: url(../img/portadaIFTS.jpg);
   height: 100vh;
+  /* height: 500px; */
   background-position: top center;
   background-size: cover;
 }
@@ -288,6 +289,9 @@ p.ciudad {
 }
 p.slogan {
   text-transform: none!important;
+  text-align: center;
+  position: relative;
+  top: 200px;
 }
 p.slogan span {
   font-weight: bold;
@@ -296,13 +300,21 @@ h1.nombre-sitio {
   font-size: 5.8vw;
   text-transform: uppercase;
   font-family: 'PT Sans', sans-serif;
+  /* font-family: sans-serif; */
   padding-top: 27px;
+  text-align: center;
+  position: relative;
+  top: 200px;
 }
 @media only screen and (min-width:768px) {
   h1.nombre-sitio {
     font-size: 11.5vw;
     margin: 0;
     line-height: 1;
+    text-align: center;
+    position: relative;
+    top: 200px;
+
   }
 }
 /** Barra **/
@@ -310,6 +322,11 @@ div.barra {
   /**background-color: #353535;**/
   background-color: #ffffff;
   padding: 10px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 .fixed {
   position: fixed;
@@ -355,10 +372,10 @@ nav.navegacion-principal a:hover {
   background-color: #0b9444;
   color: #ffffff;
 }
-nav.navegacion-principal a:last-child {
+/* nav.navegacion-principal a:last-child {
   border: 2px solid #0b9444;
   color: #0b9444;
-}
+} */
 nav.navegacion-principal a:last-child:hover {
   color: #ffffff;
 }
@@ -385,7 +402,7 @@ div.menu-movil {
     float: right;
     text-align: right;
     margin-top: 12px;
-    
+
 }
 
 div.menu-movil:hover {
