--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ ul {
 }
 .button:hover {
   background-color: #ffffff;
-  color: #0b9444; 
+  color: #0b9444;
 }
 .float-right {
   float: right;
@@ -197,6 +197,53 @@ ul {
   position: relative;
   text-shadow: 0 0 30px black;
 } */
+
+.horarios select {
+   margin:20px auto 40px auto;
+   border:1px solid #d9d9d9;
+   height:30px;
+   overflow: hidden;
+   width: 230px;
+   position:relative;
+}
+form.horarios {
+  text-align: center;
+  width: 100%;
+}
+select:focus {
+  outline: none;
+}
+form.horarios select{
+  border: none;
+  font-size: 14px;
+  height: 30px;
+  padding: 5px;
+  width: 250px;
+  color: #ffffff;
+  background-color: #0b9444;
+}
+.horarios select::after{
+	content:"\025be";
+	display:table-cell;
+	padding-top:7px;
+	text-align:center;
+	width:30px;
+	height:30px;
+	background-color:#d9d9d9;
+	position:absolute;
+	top:0;
+	right:0px;
+	pointer-events: none;
+}
+form.horarios .radio-check {
+  text-align: center;
+  width: 100%;
+  margin: 15px 0px 5px 0;
+}
+form.horarios .consultar {
+  text-align: center;
+  margin: 15px 0px;
+}
 
 @media only screen and (min-width: 992px){
   .char1 {
@@ -237,6 +284,13 @@ ul {
 div.hero {
   background-image: url(../img/portadaIFTS.jpg);
   height: 100vh;
+  /* height: 500px; */
+  background-position: top center;
+  background-size: cover;
+}
+div.hero-section {
+
+  height: 20vh;
   /* height: 500px; */
   background-position: top center;
   background-size: cover;
@@ -951,6 +1005,7 @@ div.calendario h3 {
   color: white;
   text-align: center;
   padding: 10px 0;
+  text-transform: uppercase;
 }
 div.calendario::after {
   clear: both;
@@ -964,13 +1019,23 @@ div.dia {
   transition: all .3s ease;
 }
 
+
 @media only screen and (min-width:768px) {
   div.dia {
     width: 20%;
+    /* height: 50%; */
     min-height: 240px;
     padding-top: 20px;
-    
-  
+
+}
+
+div.dia-2 {
+    width: 20%;
+    height: 50%;
+    /* min-height: 240px; */
+    padding-top: 20px;
+
+
 }
 div.dia:hover {
   background-color: #e1e1e1;
@@ -1081,6 +1146,25 @@ table.registrados thead th {
 table.registrados tr:nth-child(4n),
 table.registrados tr:nth-child(4n-1) {
   background-color: #dcdcdc;
+}
+
+form.horarios {
+  text-align: center;
+}
+form.horarios span{
+  width: 10px;
+}
+form.horarios select {
+  padding: 5px 15px;
+  margin: 10px 0px;
+  border: solid 1px;
+  color: #ffffff;
+  background-color: #0b9444;
+
+}
+form.horarios .radio-check {
+  margin: 5px 0px 20px 0;
+  width: 25px;
 }
 
 
