se suben archivos de novedades

--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,7 @@ div.detalle-evento p {
   margin-bottom: 20px;
   font-size: 20px;
 }
-/* Invitados **/
+/* invitados **/
 ul.lista-invitados li  {
   padding: 10px;
   float: left;
