--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ form.horarios .consultar {
 /** Header **/
 
 div.hero {
-  background-image: url(../img/portadaIFTS.jpg);
+  /*background-image: url(../img/portadaIFTS.jpg);*/
   height: 100vh;
   /* height: 500px; */
   background-position: top center;
@@ -298,7 +298,39 @@ div.hero-section {
 div.contenido-header {
   padding-top: 40px;
 }
+.slider {
+	width: 95%;
+	margin: auto;
+	overflow: hidden;
+}
+.slider ul {
+	display: flex;
+	padding: 0;
+	width: 400%;
 
+	animation: cambio 20s infinite alternate linear;
+}
+.slider li {
+	width: 100%;
+	list-style: none;
+}
+.slider img {
+	width: 100%;
+}
+
+@keyframes cambio {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
 .linea {
   height: 3px;
   margin-bottom: 3px;
