--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,7 @@ h2 {
     font-size: 2.4em;
     text-transform: uppercase;
     text-align: center;
+    margin-top: 70px;
 }
 h2::after {
   content: '';
