--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,7 @@ div.logo img {
 nav.navegacion-principal {
   display: none;
   width: 100%;
-  padding: 10px 0;
+  padding: 30px 0;
 }
 nav.navegacion-principal a {
    font-family: 'Oswald', sans-serif;
@@ -659,6 +659,11 @@ div.invitado img {
   max-width: 100%;
   filter:gray;
   -webkit-filter: grayscale(1);
+  -webkit-transition: all .5s ease-in-out;
+}
+div.invitado-info img {
+  max-width: 100%;
+  padding-bottom: 10px;
   -webkit-transition: all .5s ease-in-out;
 }
 div.invitado:hover img {
